tests/ui/typech/generic_method_instance_call_incorrect_type.stderr
× error[LM4001]: mismatched types
    ╭─[generic_method_instance_call_incorrect_type.lm:10:20]
 9  │
 10 │     a.bar<Boolean>(0);
    │                    ^ expected type Boolean, but found type Int32...
 11 │ }
    ∶
 9  │
 10 │     a.bar<Boolean>(0);
    │           ^^^^^^^ ...because of type defined here
 11 │ }
    ╰──
   help: expected type Boolean
            found type Int32